styles.css
:root {
    font-size: 16px;
}
body {
    background-color: #1b1b1f;
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    /* justify-content: center; */
    height: 100dvh;
    padding: 0;
    margin: 0;
}
#ingredients {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 50%;
}
li {
    font-size: 1.13rem;
}
#user-input {
    display: flex;
    flex-direction: column;
    width: 30%;
    align-items: center;
    justify-content: center;
    gap: 3%;
}
input {
    width: 50%;
}

